--- a/5_concurso_de_programacion_basica.html
+++ b/5_concurso_de_programacion_basica.html
@@ -18,12 +18,12 @@
 		<div class="margin">
 			<div class="header-nav">
 				<ul>
-					<li><a href="oferta_educativa">OFERTA EDUCATIVA</a></li>
-					<li><a href="aspirantes">ASPIRANTES</a></li>
-					<li><a href="alumnos">ALUMNOS</a></li>
-					<li><a href="docentes">DOCENTES</a></li>
-					<li><a href="egresados">EGRESADOS</a></li>
-					<li><a href="servicios">SERVICIOS</a></li>
+					<li><a href="oferta_educativa.html">OFERTA EDUCATIVA</a></li>
+					<li><a href="aspirantes.html">ASPIRANTES</a></li>
+					<li><a href="alumnos.html">ALUMNOS</a></li>
+					<li><a href="docentes.html">DOCENTES</a></li>
+					<li><a href="egresados.html">EGRESADOS</a></li>
+					<li><a href="servicios.html">SERVICIOS</a></li>
 				</ul>
 				<form name="search" action="buscador" method="get" class="search">
 					<p>
@@ -38,31 +38,31 @@
 			</div>
 			<strong class="logo"><a href="/">CONALEP CHIAPA DE CORZO</a></strong>
 			<ul class="nav">
-				<li><a href="informacion_institucional" class="informacion-institucional">INFORMACIÓN INSTITUCIONAL</a>
+				<li><a href="informacion_institucional.html" class="informacion-institucional">INFORMACIÓN INSTITUCIONAL</a>
 					<ul>
-						<li><a href="historia">HISTORIA</a></li>
-						<li><a href="mision_y_vision">MISIÓN Y VISIÓN</a></li>
-						<li><a href="historias_de_exito">HISTORIAS DE ÉXITO</a></li>
-						<li><a href="directorio">DIRECTORIO</a></li>
+						<li><a href="historia.html">HISTORIA</a></li>
+						<li><a href="mision_y_vision.html">MISIÓN Y VISIÓN</a></li>
+						<li><a href="historias_de_exito.html">HISTORIAS DE ÉXITO</a></li>
+						<li><a href="directorio.html">DIRECTORIO</a></li>
 					</ul>
 				</li>
-				<li><a href="actividades" class="actividades">ACTIVIDADES</a>
+				<li><a href="actividades.html" class="actividades">ACTIVIDADES</a>
 					<ul>
 						<li><a href="http://era.educacionchiapas.gob.mx" target="_blank">ERA</a></li>
-						<li><a href="eventos">EVENTOS</a></li>
-						<li><a href="actividades_civicas">ACTIVIDADES CIVICAS</a></li>
-						<li><a href="actividades_deportivas">ACTIVIDADES DEPORTIVAS</a></li>
-						<li><a href="actividades_culturales">ACTIVIDADES CULTURALES</a></li>
+						<li><a href="eventos.html">EVENTOS</a></li>
+						<li><a href="actividades_civicas.html">ACTIVIDADES CIVICAS</a></li>
+						<li><a href="actividades_deportivas.html">ACTIVIDADES DEPORTIVAS</a></li>
+						<li><a href="actividades_culturales.html">ACTIVIDADES CULTURALES</a></li>
 					</ul>
 				</li>
-				<li><a href="boletines" class="boletines">BOLETINES</a>
+				<li><a href="boletines.html" class="boletines">BOLETINES</a>
 					<ul>
-						<li><a href="costos">COSTOS</a></li>
-						<li><a href="proceso_de_admision">PROCESO DE ADMISIÓN</a></li>
-						<li><a href="calendario_escolar">CALENDARIO ESCOLAR</a></li>
+						<li><a href="costos.html">COSTOS</a></li>
+						<li><a href="proceso_de_admision.html">PROCESO DE ADMISIÓN</a></li>
+						<li><a href="calendario_escolar.html">CALENDARIO ESCOLAR</a></li>
 					</ul>
 				</li>
-				<li><a href="sistemas" class="sistemas">SISTEMAS</a>
+				<li><a href="sistemas.html" class="sistemas">SISTEMAS</a>
 					<ul>
 						<li><a href="https://sistemas.conalep.edu.mx:10443/ws2/websae/alumno/" target="_blank">SAE ALUMNO</a></li>
 						<li><a href="https://sistemas.conalep.edu.mx:3443/ws2/websae/psp/" target="_blank">SAE DOCENTE</a></li>
@@ -76,7 +76,7 @@
 		<div class="box-title">
 			<ul class="ancle">
 				<li><a href="/">INICIO</a></li>
-				<li><a href="noticias">NOTICIAS</a></li>
+				<li><a href="noticias.html">NOTICIAS</a></li>
 			</ul>	
 			<div class="margin">
 				<h1>5° Concurso de Programación Básica</h1>
@@ -104,9 +104,9 @@
 			<div class="main">
 				<ul>
 					<li><p>ACCESOS GENERALES</p></li>
-					<li><a href="evento_dia_del_estudiante">Evento Día del Estudiante</a></li>
-					<li><a href="10_concurso_de_diseno_web">10° Concurso de Diseño de Páginas Web</a></li>
-					<li><a href="4_festival_del_rio_grande">4° Festival del Rio Grande</a></li>
+					<li><a href="evento_dia_del_estudiante.html">Evento Día del Estudiante</a></li>
+					<li><a href="10_concurso_de_diseno_web.html">10° Concurso de Diseño de Páginas Web</a></li>
+					<li><a href="4_festival_del_rio_grande.html">4° Festival del Rio Grande</a></li>
 				</ul>
 			</div>
 		</div>
@@ -129,11 +129,11 @@
 	<div class="sub-footer">
 		<div class="margin">
 			<ul>
-				<li><a href="terminos_y_condiciones">TÉRMINOS Y CONDICIONES</a></li>
-				<li><a href="declaracion_de_privacidad">DECLARACIÓN DE PRIVACIDAD</a></li>
-				<li><a href="desarrollador">DESARROLLADOR</a></li>
-				<li><a href="mapa_del_sitio">MAPA DEL SITIO</a></li>
-				<li><a href="contacto">CONTACTO</a></li>
+				<li><a href="terminos_y_condiciones.html">TÉRMINOS Y CONDICIONES</a></li>
+				<li><a href="declaracion_de_privacidad.html">DECLARACIÓN DE PRIVACIDAD</a></li>
+				<li><a href="desarrollador.html">DESARROLLADOR</a></li>
+				<li><a href="mapa_del_sitio.html">MAPA DEL SITIO</a></li>
+				<li><a href="contacto.html">CONTACTO</a></li>
 			</ul>
 			<br>
 			Copyright © 2014 Conalep Chiapa de Corzo
