--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="margin">
             <div class="header-nav">
                 <ul>
-                    <li><a href="oferta_educativa">OFERTA EDUCATIVA</a></li>
-                    <li><a href="aspirantes">ASPIRANTES</a></li>
-                    <li><a href="alumnos">ALUMNOS</a></li>
-                    <li><a href="docentes">DOCENTES</a></li>
-                    <li><a href="egresados">EGRESADOS</a></li>
-                    <li><a href="servicios">SERVICIOS</a></li>
+                    <li><a href="oferta_educativa.html">OFERTA EDUCATIVA</a></li>
+                    <li><a href="aspirantes.html">ASPIRANTES</a></li>
+                    <li><a href="alumnos.html">ALUMNOS</a></li>
+                    <li><a href="docentes.html">DOCENTES</a></li>
+                    <li><a href="egresados.html">EGRESADOS</a></li>
+                    <li><a href="servicios.html">SERVICIOS</a></li>
                 </ul>
                 <form name="search" action="buscador" method="get" class="search">
                     <p>
@@ -44,28 +44,28 @@
             </div>
             <strong class="logo"><a href="/">CONALEP CHIAPA DE CORZO</a></strong>
             <ul class="nav">
-                <li><a href="informacion_institucional" class="informacion-institucional">INFORMACIÓN INSTITUCIONAL</a>
+                <li><a href="informacion_institucional.html" class="informacion-institucional">INFORMACIÓN INSTITUCIONAL</a>
                     <ul>
-                        <li><a href="historia">HISTORIA</a></li>
-                        <li><a href="mision_y_vision">MISIÓN Y VISIÓN</a></li>
-                        <li><a href="historias_de_exito">HISTORIAS DE ÉXITO</a></li>
-                        <li><a href="directorio">DIRECTORIO</a></li>
+                        <li><a href="historia.html">HISTORIA</a></li>
+                        <li><a href="mision_y_vision.html">MISIÓN Y VISIÓN</a></li>
+                        <li><a href="historias_de_exito.html">HISTORIAS DE ÉXITO</a></li>
+                        <li><a href="directorio.html">DIRECTORIO</a></li>
                     </ul>
                 </li>
-                <li><a href="actividades" class="actividades">ACTIVIDADES</a>
+                <li><a href="actividades.html" class="actividades">ACTIVIDADES</a>
                     <ul>
                         <li><a href="http://era.educacionchiapas.gob.mx" target="_blank">ERA</a></li>
-                        <li><a href="eventos">EVENTOS</a></li>
-                        <li><a href="actividades_civicas">ACTIVIDADES CIVICAS</a></li>
-                        <li><a href="actividades_deportivas">ACTIVIDADES DEPORTIVAS</a></li>
-                        <li><a href="actividades_culturales">ACTIVIDADES CULTURALES</a></li>
+                        <li><a href="eventos.html">EVENTOS</a></li>
+                        <li><a href="actividades_civicas.html">ACTIVIDADES CIVICAS</a></li>
+                        <li><a href="actividades_deportivas.html">ACTIVIDADES DEPORTIVAS</a></li>
+                        <li><a href="actividades_culturales.html">ACTIVIDADES CULTURALES</a></li>
                     </ul>
                 </li>
                 <li><a href="boletines" class="boletines">BOLETINES</a>
                     <ul>
-                        <li><a href="costos">COSTOS</a></li>
-                        <li><a href="proceso_de_admision">PROCESO DE ADMISIÓN</a></li>
-                        <li><a href="calendario_escolar">CALENDARIO ESCOLAR</a></li>
+                        <li><a href="costos.html">COSTOS</a></li>
+                        <li><a href="proceso_de_admision.html">PROCESO DE ADMISIÓN</a></li>
+                        <li><a href="calendario_escolar.html">CALENDARIO ESCOLAR</a></li>
                     </ul>
                 </li>
                 <li><a href="sistemas" class="sistemas">SISTEMAS</a>
@@ -84,37 +84,37 @@
             <div class="ws_images">
                 <ul>
                     <li>
-                        <a href="evento_dia_de_las_madres"><img src="galery/data/images/evento_dia_de_las_madres.jpg" alt="Evento Día de las Madres" title="Evento Día de las Madres" id="wows1_0" /></a>Conalep Chiapa de Corzo festejo a las mamás en su día, con la<br>participación de la
+                        <a href="evento_dia_de_las_madres.html"><img src="galery/data/images/evento_dia_de_las_madres.jpg" alt="Evento Día de las Madres" title="Evento Día de las Madres" id="wows1_0" /></a>Conalep Chiapa de Corzo festejo a las mamás en su día, con la<br>participación de la
                         marimba de Chiapa de Corzo, alumnos y maestros.</li>
                     <li>
-                        <a href="evento_dia_del_estudiante"><img src="galery/data/images/evento_dia_del_estudiante.jpg" alt="Evento Día del Estudiante" title="Evento Día del Estudiante" id="wows1_1" /></a>Conalep Chiapa de Corzo festejo a los alumnos en su día, con la<br>participación de
+                        <a href="evento_dia_del_estudiante.html"><img src="galery/data/images/evento_dia_del_estudiante.jpg" alt="Evento Día del Estudiante" title="Evento Día del Estudiante" id="wows1_1" /></a>Conalep Chiapa de Corzo festejo a los alumnos en su día, con la<br>participación de
                         los maestros quienes fueron los que organizaron este evento.</li>
                     <li>
-                        <a href="5_concurso_de_programacion_basica"><img src="galery/data/images/5_concurso_de_programacion_basica.jpg" alt="5° Concurso de Programación Básica" title="5° Concurso de Programación Básica" id="wows1_2" /></a>El cual se llevara a cabo en los laboratorios del área en
+                        <a href="5_concurso_de_programacion_basica.html"><img src="galery/data/images/5_concurso_de_programacion_basica.jpg" alt="5° Concurso de Programación Básica" title="5° Concurso de Programación Básica" id="wows1_2" /></a>El cual se llevara a cabo en los laboratorios del área en
                         informática el día 30 de mayo del 2014.</li>
                     <li>
-                        <a href="10_concurso_de_diseno_web"><img src="galery/data/images/10_concurso_de_diseno_web.jpg" alt="10° Concurso de Diseño de Páginas Web" title="10° Concurso de Diseño de Páginas Web" id="wows1_3" /></a>El cual se llevara a cabo en los laboratorios del área en
+                        <a href="10_concurso_de_diseno_web.html"><img src="galery/data/images/10_concurso_de_diseno_web.jpg" alt="10° Concurso de Diseño de Páginas Web" title="10° Concurso de Diseño de Páginas Web" id="wows1_3" /></a>El cual se llevara a cabo en los laboratorios del área en
                         informática el día 05 de junio del 2014.</li>
                     <li>
-                        <a href="4_festival_del_rio_grande"><img src="galery/data/images/4_festival_del_rio_grande.jpg" alt="4° Gran Festival del Rio Grande" title="4° Gran Festival del Rio Grande" id="wows1_4" /></a>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en
+                        <a href="4_festival_del_rio_grande.html"><img src="galery/data/images/4_festival_del_rio_grande.jpg" alt="4° Gran Festival del Rio Grande" title="4° Gran Festival del Rio Grande" id="wows1_4" /></a>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en
                         las majestuosas aguas del Rio Grijalva.</li>
                     <li>
-                        <a href="evento_esculturas_recicladas"><img src="galery/data/images/evento_esculturas_recicladas.jpg" alt="Evento Esculturas Recicladas" title="Evento Esculturas Recicladas" id="wows1_5" /></a>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en las
+                        <a href="evento_esculturas_recicladas.html"><img src="galery/data/images/evento_esculturas_recicladas.jpg" alt="Evento Esculturas Recicladas" title="Evento Esculturas Recicladas" id="wows1_5" /></a>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en las
                         majestuosas aguas del Rio Grijalva.</li>
                     <li>
-                        <a href="evento_trajes_ecologicos"><img src="galery/data/images/evento_trajes_ecologicos.jpg" alt="Evento Trajaes Ecológicos" title="Evento Trajaes Ecológicos" id="wows1_6" /></a>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en las majestuosas
+                        <a href="evento_trajes_ecologicos.html"><img src="galery/data/images/evento_trajes_ecologicos.jpg" alt="Evento Trajaes Ecológicos" title="Evento Trajaes Ecológicos" id="wows1_6" /></a>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en las majestuosas
                         aguas del Rio Grijalva.</li>
                 </ul>
             </div>
             <div class="ws_bullets">
                 <div>
-                    <a href="#" title="Evento Día de las Madres"><img src="galery/data/tooltips/evento_dia_de_las_madres.jpg" alt="Evento Día de las Madres" />1</a>
-                    <a href="#" title="Evento Día del Estudiante"><img src="galery/data/tooltips/evento_dia_del_estudiante.jpg" alt="Evento Día del Estudiante" />3</a>
-                    <a href="#" title="5° Concurso de Programación Básica"><img src="galery/data/tooltips/5_concurso_de_programacion_basica.jpg" alt="5° Concurso de Programación Básica" />4</a>
-                    <a href="#" title="10° Concurso de Diseño de Páginas Web"><img src="galery/data/tooltips/10_concurso_de_diseno_web.jpg" alt="10° Concurso de Diseño de Páginas Web" />5</a>
-                    <a href="#" title="4° Gran Festival del Rio Grande"><img src="galery/data/tooltips/4_festival_del_rio_grande.jpg" alt="4° Gran Festival del Rio Grande" />6</a>
-                    <a href="#" title="Evento Esculturas Recicladas"><img src="galery/data/tooltips/evento_esculturas_recicladas.jpg" alt="Evento Esculturas Recicladas" />7</a>
-                    <a href="#" title="Evento Trajaes Ecológicos"><img src="galery/data/tooltips/evento_trajes_ecologicos.jpg" alt="Evento Trajaes Ecológicos" />6</a>
+                    <a href="evento_dia_de_las_madres.html" title="Evento Día de las Madres"><img src="galery/data/tooltips/evento_dia_de_las_madres.jpg" alt="Evento Día de las Madres" />1</a>
+                    <a href="evento_dia_del_estudiante.html" title="Evento Día del Estudiante"><img src="galery/data/tooltips/evento_dia_del_estudiante.jpg" alt="Evento Día del Estudiante" />3</a>
+                    <a href="5_concurso_de_programacion_basica.html" title="5° Concurso de Programación Básica"><img src="galery/data/tooltips/5_concurso_de_programacion_basica.jpg" alt="5° Concurso de Programación Básica" />4</a>
+                    <a href="10_concurso_de_diseno_web.html" title="10° Concurso de Diseño de Páginas Web"><img src="galery/data/tooltips/10_concurso_de_diseno_web.jpg" alt="10° Concurso de Diseño de Páginas Web" />5</a>
+                    <a href="4_festival_del_rio_grande.html" title="4° Gran Festival del Rio Grande"><img src="galery/data/tooltips/4_festival_del_rio_grande.jpg" alt="4° Gran Festival del Rio Grande" />6</a>
+                    <a href="evento_esculturas_recicladas.html" title="Evento Esculturas Recicladas"><img src="galery/data/tooltips/evento_esculturas_recicladas.jpg" alt="Evento Esculturas Recicladas" />7</a>
+                    <a href="evento_trajes_ecologicos.html" title="Evento Trajaes Ecológicos"><img src="galery/data/tooltips/evento_trajes_ecologicos.jpg" alt="Evento Trajaes Ecológicos" />6</a>
                 </div>
             </div>
         </div>
@@ -123,8 +123,8 @@
         <!-- End WOWSlider.com BODY section -->
     </div>
     <div class="galeria-mobil">
-        <a href="noticias"><img class="image" src="images/conalep/galeria_mobil.jpg"></a>
-        <p class="data-galeria-mobil"><a href="noticias" class="more">Leer Más&hellip;</a></p>
+        <a href="noticias.html"><img class="image" src="images/conalep/galeria_mobil.jpg"></a>
+        <p class="data-galeria-mobil"><a href="noticias.html" class="more">Leer Más&hellip;</a></p>
     </div>
     <div class="section-news">
         <div class="margin">
@@ -136,8 +136,8 @@
                     <li class="item">
                         <iframe class="media" width="100%" height="177" src="//www.youtube.com/embed/vNymQhrQMDM?rel=0&autoplay=0&controls=0&showinfo=0" feature="player_embedded" frameborder="0" allowfullscreen></iframe>
                         <!--<iframe class="media" width="100%" height="177" src="videos/Inicio de Curso Conalep Chiapa de Corzo.mp4" frameborder="0"></iframe>-->
-                        <h3><a href="bienvenida">Bienvenida Conalep Chiapa de Corzo</a></h3>
-                        <p>Durante más de treinta años, el plantel Conalep Chiapa de corzo ha vivido una historia llena de logros y de éxitos <a href="bienvenida" class="more">Leer Más&hellip;</a></p>
+                        <h3><a href="bienvenida.html">Bienvenida Conalep Chiapa de Corzo</a></h3>
+                        <p>Durante más de treinta años, el plantel Conalep Chiapa de corzo ha vivido una historia llena de logros y de éxitos <a href="bienvenida.html" class="more">Leer Más&hellip;</a></p>
                         <p class="data">12 DE FEBRERO DEL 2014</p>
                     </li>
                     <li class="item">
@@ -145,21 +145,21 @@
                 </ul>
                 <ul class="listing">
                     <li class="item firstp">
-                        <a href="5_concurso_de_programacion_basica"><img class="image" src="images/noticias/5_concurso_de_programacion_basica.jpg"></a>
-                        <h3><a href="5_concurso_de_programacion_basica">5° Concurso de Programación Básica</a></h3>
-                        <p>5° Concurso de Programación Básica en C, El cual se llevara a cabo en los laboratorios del área en informática <a href="5_concurso_de_programacion_basica" class="more">Leer Más&hellip;</a></p>
+                        <a href="5_concurso_de_programacion_basica.html"><img class="image" src="images/noticias/5_concurso_de_programacion_basica.jpg"></a>
+                        <h3><a href="5_concurso_de_programacion_basica.html">5° Concurso de Programación Básica</a></h3>
+                        <p>5° Concurso de Programación Básica en C, El cual se llevara a cabo en los laboratorios del área en informática <a href="5_concurso_de_programacion_basica.html" class="more">Leer Más&hellip;</a></p>
                         <p class="data">30 DE MAYO DEL 2014</p>
                     </li>
                     <li class="item">
-                        <a href="10_concurso_de_diseno_web"><img class="image" src="images/noticias/10_concurso_de_diseno_de_paginas_web.jpg"></a>
-                        <h3><a href="10_concurso_de_diseno_web">10° Concurso de Diseño de Páginas Web</a></h3>
-                        <p>10° Concurso de Diseño de Páginas Web, El cual se llevara a cabo en los laboratorios del área en informática <a href="10_concurso_de_diseno_web" class="more">Leer Más&hellip;</a></p>
+                        <a href="10_concurso_de_diseno_web.html"><img class="image" src="images/noticias/10_concurso_de_diseno_de_paginas_web.jpg"></a>
+                        <h3><a href="10_concurso_de_diseno_web.html">10° Concurso de Diseño de Páginas Web</a></h3>
+                        <p>10° Concurso de Diseño de Páginas Web, El cual se llevara a cabo en los laboratorios del área en informática <a href="10_concurso_de_diseno_web.html" class="more">Leer Más&hellip;</a></p>
                         <p class="data">5 DE JUNIO DEL 2014</p>
                     </li>
                     <li class="item">
-                        <a href="4_festival_del_rio_grande"><img class="image" src="images/noticias/4_festival_del_rio_grande.jpg"></a>
-                        <h3><a href="4_festival_del_rio_grande">4° Gran Festival del Rio Grande</a></h3>
-                        <p>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en las majestuosas aguas del Rio Grijalva <a href="4_festival_del_rio_grande" class="more">Leer Más&hellip;</a></p>
+                        <a href="4_festival_del_rio_grande.html"><img class="image" src="images/noticias/4_festival_del_rio_grande.jpg"></a>
+                        <h3><a href="4_festival_del_rio_grande.html">4° Gran Festival del Rio Grande</a></h3>
+                        <p>En conmemoración al Día Mundial del Medio Ambiente, llevado a cabo en las majestuosas aguas del Rio Grijalva <a href="4_festival_del_rio_grande.html" class="more">Leer Más&hellip;</a></p>
                         <p class="data">DEL 2 AL 5 DE JUNIO DEL 2014</p>
                     </li>
                 </ul>
@@ -183,12 +183,12 @@
     <div class="sub-footer">
         <div class="margin">
             <ul>
-                <li><a href="terminos_y_condiciones">TÉRMINOS Y CONDICIONES</a></li>
-                <li><a href="declaracion_de_privacidad">DECLARACIÓN DE PRIVACIDAD</a></li>
-                <li><a href="desarrollador">DESARROLLADOR</a></li>
-                <li><a href="login/iniciar_sesion">ADMINISTRADOR</a></li>
-                <li><a href="mapa_del_sitio">MAPA DEL SITIO</a></li>
-                <li><a href="contacto">CONTACTO</a></li>
+                <li><a href="terminos_y_condiciones.html">TÉRMINOS Y CONDICIONES</a></li>
+                <li><a href="declaracion_de_privacidad.html">DECLARACIÓN DE PRIVACIDAD</a></li>
+                <li><a href="desarrollador.html">DESARROLLADOR</a></li>
+                <li><a href="login/iniciar_sesion.html">ADMINISTRADOR</a></li>
+                <li><a href="mapa_del_sitio.html">MAPA DEL SITIO</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
             <br> Copyright © 2014 Conalep Chiapa de Corzo
         </div>
